--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "html5-reset": "^2.1.3",
     "vue": "^2.2.2",
+    "vue-axios": "^2.0.1",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
